2. Виды сборщиков мусоров[#210846] небольшие изменения в описании к классу